# Eclipse-9

./: .gitignore  .ignore  AGENT.md  CMakeLists.txt  CMakePresets.json  HowToPlay  HowToPlay.txt  README.md  \
.cache/clangd/index/: FastNoiseLite.h.20312B0AB1DA7C2E.idx  FastNoiseLite.h.35E91B2064F753D8.idx  Game.h.3EFE99A72EAE3EEC.idx  Game.hpp.5796F70CCDC97B50.idx  Game.hpp.D35BBF9D7930386A.idx  GameState.hpp.19665774BC70DE5A.idx  GameState.hpp.ADA372515D1A650A.idx  InGame.h.BE5D9FCEC4802AF7.idx  InGame.hpp.5594342805CCFD42.idx  InGame.hpp.69DA92AEB5F7E02C.idx  InGameState.h.56528BA3B44423E4.idx  InGameState.hpp.4F6C6C8D30869D7E.idx  InGameState.hpp.E24662FDA4D4F43D.idx  Main.cpp.1E87B119044C39D3.idx  Main.cpp.43094A58E81AA228.idx  Map.h.3C12B38E97BFC023.idx  Map.hpp.9F6427CF40126E9C.idx  Map.hpp.FB8D36DBD7021330.idx  MapSelection.h.AABDCBA20BCBC670.idx  MapSelection.hpp.79879473F9AA864F.idx  MapSelection.hpp.EFFD0373D8203C8E.idx  MapSelectionState.h.7BFE6F319F487A1D.idx  MapSelectionState.hpp.DADA807A1C491A45.idx  MapSelectionState.hpp.FF4ED3E0505D3AAF.idx  State.hpp.6C8DA9E56F68367D.idx  StateManager.hpp.9B1000A891994559.idx  StateManager.hpp.CFA96EAF904C4417.idx  Test.h.4DCF6B96757CFEC3.idx  Tile.h.BB7378F2E28820A2.idx  Tile.hpp.5ABFD7F1C9B8DB75.idx  Tile.hpp.83178FC46F199378.idx  TileMap.h.1E5FC7BAE9D82C7B.idx  TileMap.hpp.CF3BC0C10C521599.idx  TileMap.hpp.D58A4E36B90666EA.idx  chunk.h.444B00CC143E0BF5.idx  chunk.hpp.EF1AFE7814D4AD8B.idx  chunk.hpp.FD20D3DA61CA3692.idx  player.h.7258D411A04B7C0E.idx  renderer.h.85C4D5A9DCA1A55C.idx  renderer.hpp.3B0DB43CF65E2F04.idx  (+1 more)
lib/SFML-2.6.0/extlibs/headers/freetype2/: freetype.h  ftbitmap.h  ftcache.h  ftglyph.h  ftimage.h  ftlcdfil.h  ftoutln.h  ftrender.h  ttnameid.h  tttables.h
lib/SFML-2.6.0/extlibs/headers/freetype2/config/: ftheader.h
lib/SFML-2.6.0/src/SFML/Graphics/: Font.cpp  RenderTarget.cpp
lib/SFML-2.6.0/src/SFML/Window/DRM/: InputImplUDev.cpp
lib/SFML-2.6.0/src/SFML/Window/Unix/: KeyboardImpl.cpp  WindowImplX11.cpp
src/: Main.cpp
src/Game/: Game.cpp  Game.h  Game.hpp
src/InGame/: Animation.cpp  Animation.hpp  Chunk.h  Chunk.hpp  InGame.h  InGame.hpp  InGameState.cpp  InGameState.h  InGameState.hpp  Map.h  Map.hpp  Player.cpp  Player.hpp  Tile.h  Tile.hpp  TileMap.h  TileMap.hpp
src/MainMenu/: Menu.cpp  Menu.hpp
src/Map/: Map.h
src/MapSelection/: MapSelection.h  MapSelection.hpp  MapSelectionState.h  MapSelectionState.hpp  S_Chunk.hpp  chunk.h  chunk.hpp
src/MenuMap/: MenuMap.h  chunk.h
src/Player/: player.h
src/Renderer/: renderer.h  renderer.hpp
src/State/: GameState.hpp  State.cpp  State.hpp  StateManager.hpp
src/Test/: Test.h
src/TextueHandler/: TextureHandler.hpp
